--- a/DataAccessLayer/DataAccessLayer.csproj
+++ b/DataAccessLayer/DataAccessLayer.csproj
@@ -83,6 +83,14 @@
     <Compile Include="Migrations\202105241805291_mig_writer_addstatus.designer.cs">
       <DependentUpon>202105241805291_mig_writer_addstatus.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202106082015400_mig_contentstatusadd.cs" />
+    <Compile Include="Migrations\202106082015400_mig_contentstatusadd.designer.cs">
+      <DependentUpon>202106082015400_mig_contentstatusadd.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202106082019434_mig_headingstatusadd.cs" />
+    <Compile Include="Migrations\202106082019434_mig_headingstatusadd.designer.cs">
+      <DependentUpon>202106082019434_mig_headingstatusadd.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -108,6 +116,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202105241805291_mig_writer_addstatus.resx">
       <DependentUpon>202105241805291_mig_writer_addstatus.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202106082015400_mig_contentstatusadd.resx">
+      <DependentUpon>202106082015400_mig_contentstatusadd.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202106082019434_mig_headingstatusadd.resx">
+      <DependentUpon>202106082019434_mig_headingstatusadd.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
