message operations ,contact operations and themes Added

--- a/DataAccessLayer/DataAccessLayer.csproj
+++ b/DataAccessLayer/DataAccessLayer.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Abstract\IContactDal.cs" />
     <Compile Include="Abstract\IContentDal.cs" />
     <Compile Include="Abstract\IHeadingDal.cs" />
+    <Compile Include="Abstract\IMessageDal.cs" />
     <Compile Include="Abstract\IRepository.cs" />
     <Compile Include="Abstract\IWriterDal.cs" />
     <Compile Include="Concrete\Context.cs" />
@@ -66,6 +67,7 @@
     <Compile Include="EntityFramework\EfContactDal.cs" />
     <Compile Include="EntityFramework\EfContentDal.cs" />
     <Compile Include="EntityFramework\EfHeadingDal.cs" />
+    <Compile Include="EntityFramework\EfMessageDal.cs" />
     <Compile Include="EntityFramework\EfWriterDal.cs" />
     <Compile Include="Migrations\202105171344537_mig_writer_edit.cs" />
     <Compile Include="Migrations\202105171344537_mig_writer_edit.designer.cs">
@@ -90,6 +92,14 @@
     <Compile Include="Migrations\202106082019434_mig_headingstatusadd.cs" />
     <Compile Include="Migrations\202106082019434_mig_headingstatusadd.designer.cs">
       <DependentUpon>202106082019434_mig_headingstatusadd.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202106121845362_mig_add_message.cs" />
+    <Compile Include="Migrations\202106121845362_mig_add_message.designer.cs">
+      <DependentUpon>202106121845362_mig_add_message.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202106122308222_mig_add_cantactdate.cs" />
+    <Compile Include="Migrations\202106122308222_mig_add_cantactdate.designer.cs">
+      <DependentUpon>202106122308222_mig_add_cantactdate.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -122,6 +132,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202106082019434_mig_headingstatusadd.resx">
       <DependentUpon>202106082019434_mig_headingstatusadd.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202106121845362_mig_add_message.resx">
+      <DependentUpon>202106121845362_mig_add_message.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202106122308222_mig_add_cantactdate.resx">
+      <DependentUpon>202106122308222_mig_add_cantactdate.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
