Error page added.

--- a/MvcProjectCamp/MvcProjectCamp.csproj
+++ b/MvcProjectCamp/MvcProjectCamp.csproj
@@ -137,6 +137,7 @@
     <Compile Include="Controllers\CategoryController.cs" />
     <Compile Include="Controllers\ContactController.cs" />
     <Compile Include="Controllers\ContentController.cs" />
+    <Compile Include="Controllers\ErrorPageController.cs" />
     <Compile Include="Controllers\HeadingController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\MessageController.cs" />
@@ -168,6 +169,14 @@
     <Content Include="AdminLTE-3.0.4\build\npm\DocsPublish.js" />
     <Content Include="AdminLTE-3.0.4\build\npm\Plugins.js" />
     <Content Include="AdminLTE-3.0.4\build\npm\Publish.js" />
+    <Content Include="AdminLTE-3.0.4\colorlib-error-404-10\colorlib-error-404-10\css\style.css" />
+    <Content Include="AdminLTE-3.0.4\colorlib-error-404-10\colorlib-error-404-10\img\bg.jpg" />
+    <Content Include="AdminLTE-3.0.4\colorlib-error-404-10\colorlib-error-404-10\index.html" />
+    <Content Include="AdminLTE-3.0.4\colorlib-error-404-10\colorlib-error-404-10\readme.txt" />
+    <Content Include="AdminLTE-3.0.4\colorlib-error-404-10\__MACOSX\colorlib-error-404-10\._index.html" />
+    <Content Include="AdminLTE-3.0.4\colorlib-error-404-10\__MACOSX\colorlib-error-404-10\._readme.txt" />
+    <Content Include="AdminLTE-3.0.4\colorlib-error-404-10\__MACOSX\colorlib-error-404-10\css\._style.css" />
+    <Content Include="AdminLTE-3.0.4\colorlib-error-404-10\__MACOSX\colorlib-error-404-10\img\._bg.jpg" />
     <Content Include="AdminLTE-3.0.4\dist\css\adminlte.css" />
     <Content Include="AdminLTE-3.0.4\dist\css\adminlte.min.css" />
     <Content Include="AdminLTE-3.0.4\dist\css\alt\adminlte.components.css" />
@@ -2248,6 +2257,9 @@
     <Content Include="AdminLTE-3.0.4\plugins\sweetalert2-theme-bootstrap-4\bootstrap-4.scss" />
     <Content Include="AdminLTE-3.0.4\plugins\toastr\toastr.js.map" />
     <Content Include="AdminLTE-3.0.4\README.md" />
+    <Content Include="AdminLTE-3.0.4\colorlib-error-404-10\__MACOSX\._colorlib-error-404-10" />
+    <Content Include="AdminLTE-3.0.4\colorlib-error-404-10\__MACOSX\colorlib-error-404-10\._css" />
+    <Content Include="AdminLTE-3.0.4\colorlib-error-404-10\__MACOSX\colorlib-error-404-10\._img" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
     <Content Include="Scripts\jquery-3.4.1.min.js" />
@@ -2303,10 +2315,12 @@
     <Content Include="Views\Message\NewMessage.cshtml" />
     <Content Include="Views\Message\GetInBoxMessageDetails.cshtml" />
     <Content Include="Views\Message\GetSendBoxMessageDetails.cshtml" />
+    <Content Include="Views\ErrorPage\Page404.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Models\" />
+    <Folder Include="Views\ErrorPageController\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
