--- a/DataAccessLayer/DataAccessLayer.csproj
+++ b/DataAccessLayer/DataAccessLayer.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Abstract\IContactDal.cs" />
     <Compile Include="Abstract\IContentDal.cs" />
     <Compile Include="Abstract\IHeadingDal.cs" />
+    <Compile Include="Abstract\IImageFileDal.cs" />
     <Compile Include="Abstract\IMessageDal.cs" />
     <Compile Include="Abstract\IRepository.cs" />
     <Compile Include="Abstract\IWriterDal.cs" />
@@ -67,6 +68,7 @@
     <Compile Include="EntityFramework\EfContactDal.cs" />
     <Compile Include="EntityFramework\EfContentDal.cs" />
     <Compile Include="EntityFramework\EfHeadingDal.cs" />
+    <Compile Include="EntityFramework\EfImageFileDal.cs" />
     <Compile Include="EntityFramework\EfMessageDal.cs" />
     <Compile Include="EntityFramework\EfWriterDal.cs" />
     <Compile Include="Migrations\202105171344537_mig_writer_edit.cs" />
@@ -100,6 +102,10 @@
     <Compile Include="Migrations\202106122308222_mig_add_cantactdate.cs" />
     <Compile Include="Migrations\202106122308222_mig_add_cantactdate.designer.cs">
       <DependentUpon>202106122308222_mig_add_cantactdate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202106131708417_mig_addimage_file.cs" />
+    <Compile Include="Migrations\202106131708417_mig_addimage_file.designer.cs">
+      <DependentUpon>202106131708417_mig_addimage_file.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -138,6 +144,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202106122308222_mig_add_cantactdate.resx">
       <DependentUpon>202106122308222_mig_add_cantactdate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202106131708417_mig_addimage_file.resx">
+      <DependentUpon>202106131708417_mig_addimage_file.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
